--- a/readme-vars.yml
+++ b/readme-vars.yml
@@ -6,6 +6,7 @@ project_url: "https://inkscape.org/"
 project_logo: "https://raw.githubusercontent.com/linuxserver/docker-templates/master/linuxserver.io/img/inkscape-logo.png"
 project_blurb: "[Inkscape]({{ project_url }}) is professional quality vector graphics software which runs on Linux, Mac OS X and Windows desktop computers."
 project_lsio_github_repo_url: "https://github.com/linuxserver/docker-{{ project_name }}"
+project_categories: "3D Modeling"
 project_blurb_optional_extras_enabled: false
 # supported architectures
 available_architectures:
